Fixed bug in torqueRegressor and first implementation of sparse numerical basis

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,9 @@ add_executable(subtree_regressor_test subtree_regressor_test.cpp testhumanoid.cp
 add_executable(inversedynamics_regressor_test inversedynamics_regressor_test.cpp testhumanoid.cpp)
 add_executable(inversedynamics_crba_test inversedynamics_crba_test.cpp testhumanoid.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 add_executable(comjacobian_test comjacobian_test.cpp testhumanoid.cpp)
-add_executable(sparse_numerical_subspace_test sparse_numerical_subspace_test.cpp testhumanoid.cpp testdoublejoint.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 
+set_source_files_properties(sparse_numerical_subspace_test.cpp PROPERTIES COMPILE_FLAGS -std=c++11)
+add_executable(sparse_numerical_subspace_test sparse_numerical_subspace_test.cpp testhumanoid.cpp testdoublejoint.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 
 target_link_libraries(inverse_inertia_test ${Orocos-KDL_LIBRARIES} kdl_codyco )
 target_link_libraries(regressor_utils_test ${Orocos-KDL_LIBRARIES} kdl_codyco )
@@ -19,11 +20,10 @@ target_link_libraries(comjacobian_test orocos-kdl kdl_codyco )
 target_link_libraries(sparse_numerical_subspace_test orocos-kdl kdl_codyco )
 
 
-
 add_test(test_inverse_inertia inverse_inertia_test)
 add_test(test_regressor_utils regressor_utils_test)
-#add_test(test_subtree_regressor subtree_regressor_test)
+add_test(test_subtree_regressor subtree_regressor_test)
 add_test(test_inversedynamics_regressor inversedynamics_regressor_test)
 add_test(test_inversedynamics_crba inversedynamics_crba_test)
 add_test(test_comjacobian comjacobian_test)
-add_test(test_sparse_numerical_subspace sparse_numerical_subspace_test)
+#add_test(test_sparse_numerical_subspace sparse_numerical_subspace_test)
