--- a/cmake/kdl_codyco-config.cmake.in
+++ b/cmake/kdl_codyco-config.cmake.in
@@ -1,21 +1,27 @@
-# Locate kld_codyco install directory
+# Locate kdl_codyco install directory
 
 # This module defines
+# kdl_codyco_VERSION_MAJOR
+# kdl_codyco_VERSION_MINOR
+# kdl_codyco_VERSION_PATCH
 # kdl_codyco_INCLUDE_DIRS
 # kdl_codyco_LIBRARIES
 # kdl_codyco_FOUND, is set to true
+
 
 if(NOT kdl_codyco_FOUND)
     message( "Looking for KDL in: @CMAKE_INSTALL_PREFIX@")
 
   # Version
+  set(kdl_codyco_VERSION "@KDL_CODYCO_VERSION@")
   set(kdl_codyco_VERSION_MAJOR "@KDL_CODYCO_VERSION_MAJOR@")
   set(kdl_codyco_VERSION_MINOR "@KDL_CODYCO_VERSION_MINOR@")
   set(kdl_codyco_VERSION_PATCH "@KDL_CODYCO_VERSION_PATCH@")
+  set(kdl_codyco_VERSION_TWEAK "")
 
-  set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" ${orocos_kdl_INCLUDE_DIRS} )
-  set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" ${orocos_kdl_LIBRARY_DIRS} )
-  set(kdl_codyco_LIBRARIES kdl_codyco ${orocos_kdl_LIBRARIES})
+  set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" "@orocos_kdl_INCLUDE_DIRS@" )
+  set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" "@orocos_kdl_LIBRARY_DIRS@" )
+  set(kdl_codyco_LIBRARIES kdl_codyco "@orocos_kdl_LIBRARIES@")
   include("@CMAKE_INSTALL_PREFIX@/share/kdl_codyco/kdl_codyco-target.cmake")
   set(kdl_codyco_FOUND TRUE)
 
