--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 
 compiler:
   - gcc
+  - clang
 
 before_script:
   - sudo apt-get install -qq libboost-system-dev libboost-thread-dev libtinyxml-dev
