--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,13 +48,10 @@ set(PKG_NAME ${PROJECT_NAME})
 set(PKG_LIBRARIES kdl_codyco)
 set(PKG_DEPENDS )
 
-INSTALL(EXPORT kdl_codyco-target DESTINATION "share/${PROJECT_NAME}") 
 
 set(cmake_conf_file "${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdl_codyco-config.cmake")
 configure_file("${cmake_conf_file}.in" "${cmake_conf_file}" @ONLY)
-install(FILES ${cmake_conf_file} DESTINATION share/${PROJECT_NAME}/cmake/ COMPONENT cmake)
 INSTALL(FILES ${cmake_conf_file} DESTINATION share/${PROJECT_NAME})
-INSTALL(FILES ${cmake_conf_file} DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 
 # Make the package config file
@@ -68,6 +65,10 @@ if (NOT MSVC)
 endif()
 
 include_directories(include ${orocos_kdl_INCLUDE_DIRS})
+
+file(GLOB KDL_CODYCO_HPPS
+     "include/kdl_codyco/*.hpp"
+)
 
 file(GLOB KDL_CODYCO_SRC
     "src/*.cpp"
@@ -87,9 +88,23 @@ add_library(kdl_codyco ${LIB_TYPE} ${KDL_CODYCO_SRC} ${DRRL_SRC})
 
 target_link_libraries(kdl_codyco ${orocos_kdl_LIBRARIES})
 
+SET_TARGET_PROPERTIES( kdl_codyco PROPERTIES
+  SOVERSION "${KDL_CODYCO_VERSION_MAJOR}.${KDL_CODYCO_VERSION_MINOR}"
+  VERSION "${KDL_CODYCO_VERSION}"
+  COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD}"
+  INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib"
+  PUBLIC_HEADER "${KDL_CODYCO_HPPS}"
+  )
+
+
+INSTALL(TARGETS kdl_codyco
+  EXPORT kdl_codyco-target
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  PUBLIC_HEADER DESTINATION include/kdl_codyco
+)
+
 # --------------------------------
-INSTALL(TARGETS kdl_codyco EXPORT kdl_codyco-target DESTINATION lib)
-INSTALL(DIRECTORY include/kdl_codyco DESTINATION include) 
 INSTALL(DIRECTORY include/drrl       DESTINATION include)
 
 option(CREATE_TESTS "Create regression tests using CMake" FALSE)
@@ -98,5 +113,11 @@ IF(CREATE_TESTS)
     enable_testing()
     ADD_SUBDIRECTORY(tests)
 ENDIF(CREATE_TESTS)
+
+export(PACKAGE orocos_kdl)
+
+
+INSTALL(EXPORT kdl_codyco-target DESTINATION share/kdl_codyco)
+
 
 message(STATUS "Configuration successful. Type make to compile kdl_codyco")
