--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set (KDL_CODYCO_VERSION ${KDL_CODYCO_VERSION_MAJOR}.${KDL_CODYCO_VERSION_MINOR}.
 message (STATUS "${PROJECT_NAME} version ${KDL_CODYCO_VERSION}")
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+SET( PROJ_SOURCE_DIR ${kdl_codyco_SOURCE_DIR} )
+SET( PROJ_BINARY_DIR ${kdl_codyco_BINARY_DIR} )
 
 # set the default build type
 if (NOT CMAKE_BUILD_TYPE)
