--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ before_script:
   - cd build
   - cmake -DCREATE_TESTS:BOOL=ON -DCMAKE_BUILD_TYPE=Debug ./..
 
-script: make && make test
+script: make && ctest -V
