--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(subtree_regressor_test subtree_regressor_test.cpp testhumanoid.cp
 add_executable(inversedynamics_regressor_test inversedynamics_regressor_test.cpp testhumanoid.cpp)
 add_executable(inversedynamics_crba_test inversedynamics_crba_test.cpp testhumanoid.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 add_executable(comjacobian_test comjacobian_test.cpp testhumanoid.cpp)
+add_executable(inversedynamics_different_loops_test inversedynamics_different_loops_test.cpp testhumanoid.cpp)
 
 #set_source_files_properties(sparse_numerical_subspace_test.cpp PROPERTIES COMPILE_FLAGS -std=c++11)
 #add_executable(sparse_numerical_subspace_test sparse_numerical_subspace_test.cpp testhumanoid.cpp testdoublejoint.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
@@ -17,6 +18,7 @@ target_link_libraries(subtree_regressor_test ${orocos_kdl_LIBRARIES} kdl_codyco 
 target_link_libraries(inversedynamics_regressor_test orocos-kdl kdl_codyco )
 target_link_libraries(inversedynamics_crba_test orocos-kdl kdl_codyco )
 target_link_libraries(comjacobian_test orocos-kdl kdl_codyco )
+target_link_libraries(inversedynamics_different_loops_test orocos-kdl kdl_codyco )
 #target_link_libraries(sparse_numerical_subspace_test orocos-kdl kdl_codyco )
 
 
@@ -27,6 +29,7 @@ add_test(test_inversedynamics_regressor inversedynamics_regressor_test)
 add_test(test_inversedynamics_crba inversedynamics_crba_test)
 add_test(test_comjacobian comjacobian_test)
 #add_test(test_sparse_numerical_subspace sparse_numerical_subspace_test)
+add_test(test_inversedynamics_different_loops inversedynamics_different_loops_test)
 
 #dirl related test
 add_executable(dirl_dataset_test dirl_dataset_test.cpp)
