--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   - cd ../../..
   - git clone https://github.com/traversaro/kdl_codyco
   - cd kdl_codyco
-  - git checkout experimental
+  - git checkout rovereto
   - mkdir build
   - cd build
   - cmake ../
