--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,22 @@
-# Copyright: (C) 2013 RobotCub Consortium
-# Authors: Silvio Traversaro
-# CopyPolicy: Released under the terms of the GNU GPL v2.0 (or any later version).
+cmake_minimum_required(VERSION 2.8.11)
+project(iDynTree CXX)
 
-cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
+set(VARS_PREFIX "IDYNTREE")
 
+set(${VARS_PREFIX}_MAJOR_VERSION 0)
+set(${VARS_PREFIX}_MINOR_VERSION 0)
+set(${VARS_PREFIX}_PATCH_VERSION 1)
+set(${VARS_PREFIX}_VERSION ${${VARS_PREFIX}_MAJOR_VERSION}.${${VARS_PREFIX}_MINOR_VERSION}.${${VARS_PREFIX}_PATCH_VERSION})
 
-SET(PROJECTNAME iDynTree)
+find_package(YCM REQUIRED)
+include(YCMDefaultDirs)
+ycm_default_dirs(${VARS_PREFIX})
 
-PROJECT(${PROJECTNAME})
-
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ICUB_MODULE_PATH})
+find_package(YARP REQUIRED)
+find_package(ICUB REQUIRED)
+find_package(orocos_kdl REQUIRED)
+find_package(kdl_codyco REQUIRED)
+find_package(kdl_format_io REQUIRED)
 
 SET(folder_source src/DynTree.cpp
                   src/yarp_kdl.cpp
@@ -27,40 +29,47 @@ SET(folder_header include/iCub/iDynTree/DynTree.h
                   include/iCub/iDynTree/iDyn2KDL.h
                   include/iCub/iDynTree/iCubTree.h
                   include/iCub/iDynTree/idyn2kdl_icub.h)
-                  
-if(CODYCO_USES_URDFDOM)
-     find_package(Boost REQUIRED)
-     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-endif()
-        
+
 SOURCE_GROUP("Source Files" FILES ${folder_source})
 SOURCE_GROUP("Header Files" FILES ${folder_header})
 
-INCLUDE_DIRECTORIES(include
-                    ${skinDynLib_INCLUDE_DIRS}
-                    ${iDyn_INCLUDE_DIRS}
-                    ${GSL_INCLUDE_DIRS}
-                    ${YARP_INCLUDE_DIRS}
-                    ${kdl_codyco_INCLUDE_DIRS}
-                    ${Eigen3_INCLUDE_DIR}
-                    ${kdl_format_io_INCLUDE_DIRS})
-                    
-ADD_LIBRARY(${PROJECTNAME} ${folder_source} ${folder_header})
+add_library(idyntree SHARED ${folder_source} ${folder_header})
 
-TARGET_LINK_LIBRARIES(${PROJECTNAME} iDyn
-                                     ${ICUB_LIBRARIES}
+set_target_properties(idyntree  PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
+                                           SOVERSION ${${VARS_PREFIX}_VERSION}
+                                           PUBLIC_HEADER "${folder_header}")
+                                           
+message("${VARS_PREFIX}_INSTALL_INCLUDEDIR = ${${VARS_PREFIX}_INSTALL_INCLUDEDIR}")
+target_include_directories(idyntree PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+                                           "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>"
+                                            ${skinDynLib_INCLUDE_DIRS}
+                                            ${iDyn_INCLUDE_DIRS}
+                                            ${GSL_INCLUDE_DIRS}
+                                            ${YARP_INCLUDE_DIRS}
+                                            ${kdl_codyco_INCLUDE_DIRS}
+                                            ${Eigen3_INCLUDE_DIR}
+                                            ${kdl_format_io_INCLUDE_DIRS})
+                                            
+target_link_libraries(idyntree       iDyn
                                      ${GSL_LIBRARIES}
                                      ${YARP_LIBRARIES}
                                      ${kdl_codyco_LIBRARIES}
                                      ${kdl_format_io_LIBRARIES}
-				                     ${Boost_LIBRARIES})
+                                     ${Boost_LIBRARIES})
 
+install(TARGETS idyntree
+        EXPORT iDynTree
+        RUNTIME DESTINATION "${${VARS_PREFIX}_INSTALL_BINDIR}" COMPONENT bin
+        LIBRARY DESTINATION "${${VARS_PREFIX}_INSTALL_LIBDIR}" COMPONENT shlib
+        PUBLIC_HEADER DESTINATION "${${VARS_PREFIX}_INSTALL_INCLUDEDIR}/iCub/iDynTree" COMPONENT dev)
 
-icub_export_library(${PROJECTNAME} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
-                                   DESTINATION include/iCub/iDynTree
-                                   FILES ${folder_header})
-                                  
+set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree)
 
+include(InstallBasicPackageFiles)
+install_basic_package_files(iDynTree    VARS_PREFIX ${VARS_PREFIX}
+                                        VERSION ${${VARS_PREFIX}_VERSION}
+                                        COMPATIBILITY SameMajorVersion
+                                        TARGETS_PROPERTY ${VARS_PREFIX}_TARGETS
+                                        NO_CHECK_REQUIRED_COMPONENTS_MACRO)
 
-message(STATUS "Configuration successful. Type make to compile iDynTree")
-
+include(AddUninstallTarget)
