--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 
 install:
   - sudo sh -c 'echo "deb http://www.icub.org/ubuntu precise contrib/science" > /etc/apt/sources.list.d/icub.list'
-  - sudo add-apt-repository ppa:kalakris/cmake
+  - sudo add-apt-repository -y ppa:kalakris/cmake
   - sudo apt-get update
   - sudo apt-get install -qq libeigen3-dev
   - sudo apt-get --force-yes install icub
