--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - sudo apt-get update
   - sudo apt-get install -qq libeigen3-dev
   - sudo apt-get --force-yes install icub
-  - sudo apt-get upgrade
+  - sudo apt-get install cmake
 
 before_script:
   - cmake --version
