--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,15 @@ before_script:
   - make
   - make install
   - cd ../..
-  # Prepare codyco build
+  # Build and install YCM
+  - git clone https://github.com/robotology/ycm.git
+  - cd ycm
+  - mkdir build
+  - cd build 
+  - cmake ..
+  - make 
+  - sudo make install
+  # Prepare iDynTree build
   - mkdir build
   - cd build
   - cmake -DCMAKE_BUILD_TYPE=${IDYNTREE_TRAVIS_BUILD_TYPE} ..
