[travis] corrected path of build_urdfdom script

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ before_script:
   - make install
   - cd ../..
   # Build kdl_format_io and install it in a local directory
-  - sudo chmod +x ./.travis/build_urdfdom
-  - ./.travis/build_urdfdom
+  - sudo chmod +x ./iDynTree/.travis/build_urdfdom
+  - ./iDynTree/.travis/build_urdfdom
   - git clone https://github.com/traversaro/kdl_format_io
   - cd kdl_format_io
   - mkdir build
