No symbols exposed: building as a static library for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ SET(folder_header include/iCub/iDynTree/DynTree.h
 SOURCE_GROUP("Source Files" FILES ${folder_source})
 SOURCE_GROUP("Header Files" FILES ${folder_header})
 
-add_library(idyntree SHARED ${folder_source} ${folder_header})
+add_library(idyntree STATIC ${folder_source} ${folder_header})
 
 set_target_properties(idyntree  PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
                                            SOVERSION ${${VARS_PREFIX}_VERSION}
