--- a/cmake/kdl_codyco-config.cmake.in
+++ b/cmake/kdl_codyco-config.cmake.in
@@ -21,7 +21,7 @@ if(NOT kdl_codyco_FOUND)
 
   set(kdl_codyco_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include" "@orocos_kdl_INCLUDE_DIRS@" )
   set(kdl_codyco_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib" "@orocos_kdl_LIBRARY_DIRS@" )
-  set(kdl_codyco_LIBRARIES kdl_codyco "@orocos_kdl_LIBRARIES@")
+  set(kdl_codyco_LIBRARIES kdl-codyco "@orocos_kdl_LIBRARIES@")
   include("@CMAKE_INSTALL_PREFIX@/share/kdl_codyco/kdl_codyco-target.cmake")
   set(kdl_codyco_FOUND TRUE)
 
